Revert changes to transport/listener code